<resources>
    <string name="app_name">My Workout History</string>
    <string name="exercise1">Pompki</string>
    <string name="exercise2">Brzuszki</string>
    <string name="exercise3">Przysiady</string>
    <string name="exercise4">Rowerek</string>
    <string name="exercise5">Orbi</string>
    <string name="initValue">0</string>
    <string name="button10">+10</string>
    <string name="button20">+20</string>
    <string name="button30">+30</string>
    <string name="button01">+0.1</string>
    <string name="button05">+0.5</string>
    <string name="button5">+5</string>
    <string name="button1">+1</string>
    <string name="MainButton1">Capture Daily Activity</string>
    <string name="MainButton2">View History</string>
    <string name="MainButton3">Settings</string>
    <string name="MainButton4">Export to CSV</string>
    <string name="MainButton5">Save/Load</string>
    <string name="title_activity_history">History of workouts</string>
    <string name="action_saveToFile">Save</string>
    <string name="action_loadToFile">Load</string>
    <string name="clock_text">Workout time: </string>
    <string name="clock_time">0</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_credits_settings">Credits Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
