<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bart.MyWorkoutHistory.DailyWorkoutScreen"
    android:keepScreenOn="true">


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout1"
        android:layout_width="266dp"
        android:layout_height="205dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:columnCount="5"
        android:orientation="vertical"
        android:rowCount="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".GridXMLActivity">

        <TextView
            android:id="@+id/textViewEx1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/exercise1"
            android:textSize='12sp' />

        <EditText
            android:id="@+id/ex1Value"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="@string/initValue"
            android:textSize='12sp' />

        <Button
            android:id="@+id/button1Ex1"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+30" />

        <Button
            android:id="@+id/button2Ex1"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="@string/button20" />

        <Button
            android:id="@+id/button3Ex1"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+10" />

        <TextView
            android:id="@+id/textViewEx2"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/exercise2"
            android:textSize='12sp' />

        <EditText
            android:id="@+id/ex2Value"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="@string/initValue"
            android:textSize='12sp' />

        <Button
            android:id="@+id/button1Ex2"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+30" />

        <Button
            android:id="@+id/button2Ex2"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="@string/button20" />

        <Button
            android:id="@+id/button3Ex2"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+10" />

        <TextView
            android:id="@+id/textViewEx3"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/exercise3"
            android:textSize='12sp' />

        <EditText
            android:id="@+id/ex3Value"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="@string/initValue"
            android:textSize='12sp' />

        <Button
            android:id="@+id/button1Ex3"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+30" />

        <Button
            android:id="@+id/button2Ex3"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="@string/button20" />

        <Button
            android:id="@+id/button3Ex3"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+10" />

        <TextView
            android:id="@+id/textViewEx4"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:text="@string/exercise4"
            android:textSize='12sp' />

        <EditText
            android:id="@+id/ex4Value"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="@string/initValue"
            android:textSize='12sp' />

        <Button
            android:id="@+id/button1Ex4"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+5" />

        <Button
            android:id="@+id/button2Ex4"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button3Ex4"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+0.5" />


        <TextView
            android:id="@+id/textViewEx5"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:text="@string/exercise5"
            android:textSize='12sp' />

        <EditText
            android:id="@+id/ex5Value"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:ems="4"
            android:inputType="numberDecimal"
            android:text="@string/initValue"
            android:textSize='12sp' />

        <Button
            android:id="@+id/button1Ex5"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+100" />

        <Button
            android:id="@+id/button2Ex5"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+10" />

        <Button
            android:id="@+id/button3Ex5"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="onClickButton"
            android:text="+1" />
    </GridLayout>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/GridLayout1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="Workout Time:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GridLayout1" />


</android.support.constraint.ConstraintLayout>
